--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "monit_stable": "docker exec -it expressjs_stable pm2 monit"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "dotenv": "^6.1.0",
     "express": "^4.16.1"
   }
