--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "dotenv": "^6.1.0",
-    "express": "^4.16.1"
+    "express": "^4.16.1",
+    "express-joi-validator": "^2.0.0",
+    "joi": "^14.0.4"
   }
 }
